--- a/View/Windows/MainWindow.xaml
+++ b/View/Windows/MainWindow.xaml
@@ -8,30 +8,53 @@
         mc:Ignorable="d"
         MinHeight="430" MinWidth="350" MaxHeight="430" MaxWidth="350">
 
-    <Grid>
+
+    <Grid Background="#bde0fe">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" Panel.ZIndex="2">
+        <StackPanel Orientation="Horizontal" >
             <Button Name="exit" 
                     Grid.Column="1" 
-                    Command="{Binding exitButton_mouseClick}">
+                    Command="{Binding exitButton_mouseClick}"
+                    Cursor="Hand" 
+                    BorderThickness="0"
+                    Foreground="#00000000" Margin="5,2,0,0">
                 <Button.Background>
                     <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
                 </Button.Background>
                 <Button.BorderBrush>
                     <SolidColorBrush Color="#FF707070" Opacity="0"/>
                 </Button.BorderBrush>
-                <Image Source="/Images/Exit.ico" Height="30" Width="44"/>
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Content">
+                            <Setter.Value>
+                                <Image Source="/Images/doorClose.png"/>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Content">
+                                    <Setter.Value>
+                                        <Image Source="/Images/doorOpen.png"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
             </Button>
         </StackPanel>
 
         <Grid Grid.Row="1">
-            
-            
+
+            <Button HorizontalAlignment="Center" VerticalAlignment="Center" Height="180" Width="180">
+                
+            </Button>
             
         </Grid>
         
