--- a/View/Windows/MainWindow.xaml
+++ b/View/Windows/MainWindow.xaml
@@ -2,9 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VFMDesctop.View" 
-        xmlns:windows="clr-namespace:VFMDesctop.ViewModels.Windows"
         mc:Ignorable="d"
         MinHeight="430" MinWidth="350" MaxHeight="430" MaxWidth="350">
 
@@ -16,48 +16,116 @@
             <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" >
-            <Button Name="exit" 
-                    Grid.Column="1" 
-                    Command="{Binding exitButton_mouseClick}"
-                    Cursor="Hand" 
-                    BorderThickness="0"
-                    Foreground="#00000000" Margin="5,2,0,0">
-                <Button.Background>
-                    <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
-                </Button.Background>
-                <Button.BorderBrush>
-                    <SolidColorBrush Color="#FF707070" Opacity="0"/>
-                </Button.BorderBrush>
-                <Button.Style>
-                    <Style TargetType="Button">
-                        <Setter Property="Content">
-                            <Setter.Value>
-                                <Image Source="/Images/doorClose.png"/>
-                            </Setter.Value>
-                        </Setter>
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="true">
-                                <Setter Property="Content">
-                                    <Setter.Value>
-                                        <Image Source="/Images/doorOpen.png"/>
-                                    </Setter.Value>
-                                </Setter>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>
-            </Button>
-        </StackPanel>
-
-        <Grid Grid.Row="1">
-
-            <Button HorizontalAlignment="Center" VerticalAlignment="Center" Height="180" Width="180">
-                
-            </Button>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
             
+            <StackPanel Orientation="Horizontal" 
+                        Grid.Column="0" >
+                <Button Name="Exit" 
+                        Grid.Column="1" 
+                        Command="{Binding ExitButton_Click}"
+                        Cursor="Hand" 
+                        BorderThickness="0"
+                        Foreground="#00000000" Margin="5,2,0,0">
+                    <Button.Background>
+                        <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
+                    </Button.Background>
+                    <Button.BorderBrush>
+                        <SolidColorBrush Color="#FF707070" Opacity="0"/>
+                    </Button.BorderBrush>
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <Image Source="/Images/doorClose.png"/>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="true">
+                                    <Setter Property="Content">
+                                        <Setter.Value>
+                                            <Image Source="/Images/doorOpen.png"/>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+            </StackPanel>
+
+            <TextBlock Grid.Column="1" 
+                       Text="Привет Lineyss" 
+                       HorizontalAlignment="Right" 
+                       VerticalAlignment="Center" Margin="0,0,10,0" FontFamily="Verdana"/>
+
         </Grid>
-        
+
+        <Button x:Name="ConnectButton" 
+                Grid.Row="1"
+                BorderThickness="4"
+                BorderBrush="{Binding BorderConnectButton}"
+                Width="140"
+                Height="140" 
+                Cursor="Hand"
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center" 
+                Foreground="Black"
+                Command="{Binding ConnectButton_Click}">
+
+            <!-- <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseEnter">
+                    <i:InvokeCommandAction Command="{Binding ButtonConnect_MouseOver}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers> -->
+
+
+            <Button.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Background" 
+                            Value="{Binding ButtonConnect_Background}"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="Button">
+                                <Border Name="border" 
+                                        Background="{TemplateBinding Background}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        BorderBrush="Black"
+                                        CornerRadius="100">
+                                    <Grid>
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                    </Grid>
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsPressed" Value="true">
+                                        <Setter Property="Background" Value="Gray"/>
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+
+            </Button.Resources>
+
+            <StackPanel VerticalAlignment="Center" Width="98">
+                <TextBlock x:Name="ConnectionStatus" 
+                           Text="{Binding ConnectionStatus_Text}" 
+                           HorizontalAlignment="Center" 
+                           TextAlignment="Center" 
+                           Margin="0,0,0,5"
+                           FontFamily="Verdana" 
+                           FontWeight="Bold"/>
+                <Image Source="/Images/on.png"
+                       Height="65" 
+                       Width="97"/>
+            </StackPanel>
+
+        </Button>
+
     </Grid>
 
 </Window>
