--- a/View/Pages/AuthorizationPage.xaml
+++ b/View/Pages/AuthorizationPage.xaml
@@ -1,24 +1,53 @@
 ﻿<Page x:Class="VFMDesctop.View.Pages.AuthorizationPage"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VFMDesctop.View.Pages"
-        mc:Ignorable="d"
-        Title="AuthorizationPage" Height="450" Width="800">
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:local="clr-namespace:VFMDesctop.View.Pages"
+      xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes" 
+      xmlns:components="clr-namespace:VFMDesctop.View.Components"
+      mc:Ignorable="d"
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="AuthorizationPage">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
+
+        <Label Content="Авторизация" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" />
+
+        <TextBox Grid.Row="1" 
+                 Name="Login" 
+                 HorizontalAlignment="Center" 
+                 VerticalAlignment="Center" 
+                 Height="38" 
+                 Width="216"
+                 Text="{Binding LoginText, Mode=TwoWay}"
+                 md:HintAssist.Hint="Логин"
+                 md:HintAssist.HelperText="{Binding LoginHelperText}"/>
+
+        <components:BindablePasswordBox Grid.Row="2" 
+                                        HorizontalAlignment="Center" 
+                                        VerticalAlignment="Center"
+                                        Width="216" 
+                                        Height="38"
+                                        Password="{Binding PasswordPassword, Mode=TwoWay}"
+                                        md:HintAssist.HelperText="{Binding PasswordHelperText}"
+                                        md:HintAssist.Hint="Пароль"/>
 
         <Button Content="Войти" 
                 Command="{Binding LoginButton_Click}" 
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center" 
-                FontSize="72"/>
+                FontSize="20"
+                Grid.Row="3" 
+                Height="59" 
+                Width="216"
+                Cursor="Hand"/>
 
     </Grid>
 
