--- a/View/Windows/MainWindow.xaml
+++ b/View/Windows/MainWindow.xaml
@@ -2,14 +2,138 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VFMDesctop.View" 
         mc:Ignorable="d"
-        MinHeight="430" MinWidth="350" MaxHeight="430" MaxWidth="350">
+        WindowStyle="None"
+        Height="430" 
+        Width="350"
+        WindowStartupLocation="CenterScreen"
+        Background="Transparent"
+        ResizeMode="NoResize">
 
-    <Frame Name="Navigate"
-           NavigationUIVisibility="Hidden"
-           Content="{Binding SourceNavigate}"/>
+    <Grid Background="{DynamicResource BackgroundColor}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="20*"/>
+        </Grid.RowDefinitions>
+
+        <Grid Name="ToolBar"
+              Background="Transparent">
+
+            <Grid.InputBindings>
+                <MouseBinding Gesture="LeftClick"
+                              Command="{Binding ToolBar_MouseDown}"/>
+            </Grid.InputBindings>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Name="ChangeTheme" 
+                        Orientation="Horizontal"
+                        Cursor="Hand">
+
+                <StackPanel.InputBindings>
+                    <MouseBinding Gesture="LeftClick"
+                                  Command="{Binding ChangeTheme_Click}"/>
+                </StackPanel.InputBindings>
+                
+                <Image Source="{DynamicResource ThemeIcon}" 
+                       Height="20" 
+                       Margin="5,0,0,0" 
+                       Width="14"/>
+                
+                <TextBlock Text="Theme" 
+                           FontSize="14" 
+                           FontWeight="Bold" 
+                           Height="20" 
+                           HorizontalAlignment="Center"
+                           Foreground="{DynamicResource ForegroundColor}"/>
+            </StackPanel>
+
+            <TextBlock Grid.Column="1"
+                       Text="VFM" 
+                       TextAlignment="Center" 
+                       FontSize="16" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" 
+                       FontWeight="Bold"
+                       Foreground="{DynamicResource ForegroundColor}"/>
+
+            <StackPanel Grid.Column="2"
+                        Orientation="Horizontal" 
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center">
+
+                <Image Height="18"
+                       Name="Minimize"
+                       Cursor="Hand"
+                       Width="18" 
+                       Margin="0,0,10,0" 
+                       VerticalAlignment="Center" 
+                       HorizontalAlignment="Center">
+
+                    <Image.InputBindings>
+                        <MouseBinding Gesture="LeftClick" 
+                                      Command="{Binding Minimize_Click}" />
+                    </Image.InputBindings>
+
+                    <Image.Style>
+                        <Style TargetType="Image">
+                            <Setter Property="Source" 
+                                    Value="{DynamicResource MinimizeIcon}"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver"
+                                         Value="True">
+                                    <Setter Property="Source"
+                                            Value="/Images/Over/minimizeOver.png"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+                </Image>
+
+                <Image Height="18" 
+                       Cursor="Hand"
+                       Name="Close"
+                       Width="18"
+                       Margin="0,0,5,0"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center">
+
+                    <Image.InputBindings>
+                        <MouseBinding Gesture="LeftClick" 
+                                      Command="{Binding Close_Click}" />
+                    </Image.InputBindings>
+
+                    <Image.Style>
+                        <Style TargetType="Image">
+                            <Setter Property="Source"
+                                    Value="{DynamicResource CloseIcon}" />
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver"
+                                         Value="true">
+                                    <Setter Property="Source"
+                                            Value="/Images/Over/close_iconOver.png" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Image.Style>
+
+                </Image>
+
+            </StackPanel>
+
+        </Grid>
+
+        <Frame Name="Navigate"
+               NavigationUIVisibility="Hidden"
+               Content="{Binding SourceNavigate}"
+               Grid.Row="1"/>
+
+    </Grid>
 
 </Window>
